<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_curve_without_border"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_confirm_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp16w"
            android:fontFamily="@font/convergence"
            android:lineSpacingExtra="8sp"
            android:gravity="center"
            android:text="@string/conform_message"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/sp19"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <Button
            android:id="@+id/btn_confirm_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16w"
            android:layout_marginTop="@dimen/dp40w"
            android:layout_marginEnd="@dimen/dp8w"
            android:layout_marginBottom="@dimen/dp16w"
            android:text="@string/conform_no"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_confirm_yes"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_confirm_message" />

        <Button
            android:id="@+id/btn_confirm_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp8w"
            android:layout_marginTop="@dimen/dp40w"
            android:layout_marginEnd="@dimen/dp16w"
            android:layout_marginBottom="@dimen/dp16w"
            android:text="@string/conform_yes"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_confirm_no"
            app:layout_constraintTop_toBottomOf="@+id/tv_confirm_message" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>